fix: modal z-index stacking issue

--- a/src/layouts/InstrumentLayout/InstrumentLayout.scss
+++ b/src/layouts/InstrumentLayout/InstrumentLayout.scss
@@ -3,9 +3,12 @@
   height: 100dvh;
   display: flex;
   flex-direction: column;
+  position: relative;
 
   &__header {
     height: 20%;
+    position: relative;
+    z-index: 10;
   }
 
   &__content {
@@ -13,13 +16,18 @@
     justify-content: flex-end;
     width: 100%;
     height: 80%;
+    position: relative;
+    z-index: 1;
   }
 
   &__outlet {
     width: 80%;
+    position: relative;
   }
 
   &__sidebar {
     width: 20%;
+    position: relative;
+    z-index: 5; 
   }
 }
